config: report error and exit cleanly if getaddrinfo fails at startup PR: 50592

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1059472 13f79535-47bb-0310-9956-ffa450edef68